--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "framer-motion": "^12.26.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
-    "next": "15.1.0",
+    "next": "^16.1.2",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
