--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "framer-motion": "^12.26.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
+    "mammoth": "^1.11.0",
     "next": "^16.1.2",
+    "pdfjs-dist": "^5.4.530",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
